fixing file paths

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8">
     <title>Taj Mahal Restaurant - Toronto</title>
-    <link rel="stylesheet" type="text/css" href="/css/Home/home.css">
+    <link rel="stylesheet" type="text/css" href="css/Home/home.css">
   </head>
   <body>
     <!-- HEADER -->
@@ -19,8 +19,8 @@
             <!-- SLOGAN -->
             <div id="header-logo">
                 <h2 class="hidden">Company Logo</h2>
-                <a href="/index.html">
-                    <img id="logo" src="/resources/Images/Shared/taj-mahal-full.png">
+                <a href="index.html">
+                    <img id="logo" src="resources/Images/Shared/taj-mahal-full.png">
                 </a>
             </div>
             
@@ -30,27 +30,27 @@
                 <h3 class="hidden">Main navigation</h3>
                 <ul >
 
-                    <li class="dropdown"><a href="/index.html">Home</a></li>
+                    <li class="dropdown"><a href="index.html">Home</a></li>
 
-                    <li class="dropdown"><a href="/pages/aboutus.html">About</a>
+                    <li class="dropdown"><a href="pages/aboutus.html">About</a>
                         <ul class="dropdown-content">
-                            <li class="drop-link"><a href="/pages/aboutus.html">Who we are</a></li>
-                            <li class="drop-link"><a href="/pages/contact.html">Contact</a></li>
-                            <li class="drop-link"><a href="/pages/locations.html">Location</a></li>
-                            <li class="drop-link"><a href="/pages/careers.html">Careers</a></li>
+                            <li class="drop-link"><a href="pages/aboutus.html">Who we are</a></li>
+                            <li class="drop-link"><a href="pages/contact.html">Contact</a></li>
+                            <li class="drop-link"><a href="pages/locations.html">Location</a></li>
+                            <li class="drop-link"><a href="pages/careers.html">Careers</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown"><a href="/pages/menu.html">Dining Experience</a>
+                    <li class="dropdown"><a href="pages/menu.html">Dining Experience</a>
                         <ul class="dropdown-content">
-                        <li class="drop-link"><a href="/pages/menu.html">Menu</a></li>
-                        <li class="drop-link"><a href="/pages/specials.html">Weekly Specials</a></li>
-                        <li class="drop-link"><a href="/pages/events.html">Events Booking</a></li>
-                        <li class="drop-link"><a href="/pages/GiftCards.html">Gift Cards</a></li>
+                        <li class="drop-link"><a href="pages/menu.html">Menu</a></li>
+                        <li class="drop-link"><a href="pages/specials.html">Weekly Specials</a></li>
+                        <li class="drop-link"><a href="pages/events.html">Events Booking</a></li>
+                        <li class="drop-link"><a href="pages/GiftCards.html">Gift Cards</a></li>
                         </ul>
                     </li>
 
-                    <li class="dropdown"><a href="/pages/sitemap.html">Site Map</a></li>
-                    <li class="dropdown"><a href="/pages/contest.html">Contests</a></li>
+                    <li class="dropdown"><a href="pages/sitemap.html">Site Map</a></li>
+                    <li class="dropdown"><a href="pages/contest.html">Contests</a></li>
 
                 </ul>
             </nav>
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="banner-img">
-            <img src="/resources/Images/Home/thali.jpg" alt="Traditional Indian Thali">
+            <img src="resources/Images/Home/thali.jpg" alt="Traditional Indian Thali">
         </div>
     </section>
       
@@ -88,19 +88,19 @@
 
                       <section class="col-33">
                           <h3>Authentic Spices</h3>
-                          <p class="three-imgs"><img src="/resources/Images/Home/spice.png" alt="Sowing Seeds"></p>
+                          <p class="three-imgs"><img src="resources/Images/Home/spice.png" alt="Sowing Seeds"></p>
                           <p class="three-imgs">We use the best quality aromatic spices to satisfy your taste buds.</p>
                       </section>
 
                       <section class="col-33">
                           <h3>Experienced Chefs</h3>
-                          <p class="three-imgs"><img src="/resources/Images/Home/chef.png" alt="Looking for Information"></p>
+                          <p class="three-imgs"><img src="resources/Images/Home/chef.png" alt="Looking for Information"></p>
                           <p class="three-imgs">Our award-winning Chefs have extensive experience preparing naan, tandoor, biryani and curries.</p>
                       </section>
 
                       <section class="col-33">
                           <h3>Hospitality</h3>
-                          <p class="three-imgs"><img src="/resources/Images/Home/satisfied.png" alt="Home Farming"></p>
+                          <p class="three-imgs"><img src="resources/Images/Home/satisfied.png" alt="Home Farming"></p>
                           <p class="three-imgs">Our staff are friendly and treat every diner as their own guest.</p>
                       </section>
 
