--- a/pages/menu.html
+++ b/pages/menu.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Our Menu</title>
-  <link rel="stylesheet" href="/css/Menu/menu.css" />
+  <link rel="stylesheet" href="../css/Menu/menu.css" />
   <link href="https://fonts.googleapis.com/css2?family=Karma:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
-  <script type="text/javascript" src="/javascript/jquery-3.5.1.js"></script>
-  <script type="text/javascript" src="/javascript/menu/menu.js"></script>
+  <script type="text/javascript" src="../javascript/jquery-3.5.1.js"></script>
+  <script type="text/javascript" src="../javascript/menu/menu.js"></script>
 </head>
 <body>
 
@@ -18,8 +18,8 @@
         <!-- SLOGAN -->
         <div id="header-logo">
             <h2 class="hidden">Company Logo</h2>
-            <a href="/index.html">
-                <img id="logo" src="/resources/Images/Shared/taj-mahal-full.png">
+            <a href="../index.html">
+                <img id="logo" src="../resources/Images/Shared/taj-mahal-full.png">
             </a>
         </div>
         
@@ -29,27 +29,27 @@
             <h3 class="hidden">Main navigation</h3>
             <ul >
 
-                <li class="dropdown"><a href="/index.html">Home</a></li>
+                <li class="dropdown"><a href="../index.html">Home</a></li>
 
-                <li class="dropdown"><a href="/pages/aboutus.html">About</a>
+                <li class="dropdown"><a href="../pages/aboutus.html">About</a>
                     <ul class="dropdown-content">
-                        <li class="drop-link"><a href="/pages/aboutus.html">Who we are</a></li>
-                        <li class="drop-link"><a href="/pages/contact.html">Contact</a></li>
-                        <li class="drop-link"><a href="/pages/locations.html">Location</a></li>
-                        <li class="drop-link"><a href="/pages/careers.html">Careers</a></li>
+                        <li class="drop-link"><a href="../pages/aboutus.html">Who we are</a></li>
+                        <li class="drop-link"><a href="../pages/contact.html">Contact</a></li>
+                        <li class="drop-link"><a href="../pages/locations.html">Location</a></li>
+                        <li class="drop-link"><a href="../pages/careers.html">Careers</a></li>
                     </ul>
                 </li>
-                <li class="dropdown"><a href="/pages/menu.html">Dining Experience</a>
+                <li class="dropdown"><a href="../pages/menu.html">Dining Experience</a>
                     <ul class="dropdown-content">
-                    <li class="drop-link"><a href="/pages/menu.html">Menu</a></li>
-                    <li class="drop-link"><a href="/pages/specials.html">Weekly Specials</a></li>
-                    <li class="drop-link"><a href="/pages/events.html">Events Booking</a></li>
-                    <li class="drop-link"><a href="/pages/GiftCards.html">Gift Cards</a></li>
+                    <li class="drop-link"><a href="../pages/menu.html">Menu</a></li>
+                    <li class="drop-link"><a href="../pages/specials.html">Weekly Specials</a></li>
+                    <li class="drop-link"><a href="../pages/events.html">Events Booking</a></li>
+                    <li class="drop-link"><a href="../pages/GiftCards.html">Gift Cards</a></li>
                     </ul>
                 </li>
 
-                <li class="dropdown"><a href="/pages/sitemap.html">Site Map</a></li>
-                <li class="dropdown"><a href="/pages/contest.html">Contests</a></li>
+                <li class="dropdown"><a href="../pages/sitemap.html">Site Map</a></li>
+                <li class="dropdown"><a href="../pages/contest.html">Contests</a></li>
 
             </ul>
         </nav>
