--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -5,9 +5,9 @@
 <head>
   <meta charset="utf-8">
   <title>About Us</title>
-  <link rel="stylesheet" type="text/css" href="/css/About/about.css">
-  <script type="text/javascript" src="/javascript/jquery-3.5.1.js"></script>
-  <script type="text/javascript" src="/javascript/about/aboutus.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/About/about.css">
+  <script type="text/javascript" src="../javascript/jquery-3.5.1.js"></script>
+  <script type="text/javascript" src="../javascript/about/aboutus.js"></script>
 </head>
 <body>
   <!-- HEADER -->
@@ -18,8 +18,8 @@
         <!-- SLOGAN -->
         <div id="header-logo">
             <h2 class="hidden">Company Logo</h2>
-            <a href="/index.html">
-                <img id="logo" src="/resources/Images/Shared/taj-mahal-full.png">
+            <a href="../index.html">
+                <img id="logo" src="../resources/Images/Shared/taj-mahal-full.png">
             </a>
         </div>
         
@@ -29,27 +29,27 @@
             <h3 class="hidden">Main navigation</h3>
             <ul >
 
-                <li class="dropdown"><a href="/index.html">Home</a></li>
+                <li class="dropdown"><a href="../index.html">Home</a></li>
 
-                <li class="dropdown"><a href="/pages/aboutus.html">About</a>
+                <li class="dropdown"><a href="../pages/aboutus.html">About</a>
                     <ul class="dropdown-content">
-                        <li class="drop-link"><a href="/pages/aboutus.html">Who we are</a></li>
-                        <li class="drop-link"><a href="/pages/contact.html">Contact</a></li>
-                        <li class="drop-link"><a href="/pages/locations.html">Location</a></li>
-                        <li class="drop-link"><a href="/pages/careers.html">Careers</a></li>
+                        <li class="drop-link"><a href="../pages/aboutus.html">Who we are</a></li>
+                        <li class="drop-link"><a href="../pages/contact.html">Contact</a></li>
+                        <li class="drop-link"><a href="../pages/locations.html">Location</a></li>
+                        <li class="drop-link"><a href="../pages/careers.html">Careers</a></li>
                     </ul>
                 </li>
-                <li class="dropdown"><a href="/pages/menu.html">Dining Experience</a>
+                <li class="dropdown"><a href="../pages/menu.html">Dining Experience</a>
                     <ul class="dropdown-content">
-                    <li class="drop-link"><a href="/pages/menu.html">Menu</a></li>
-                    <li class="drop-link"><a href="/pages/specials.html">Weekly Specials</a></li>
-                    <li class="drop-link"><a href="/pages/events.html">Events Booking</a></li>
-                    <li class="drop-link"><a href="/pages/GiftCards.html">Gift Cards</a></li>
+                    <li class="drop-link"><a href="../pages/menu.html">Menu</a></li>
+                    <li class="drop-link"><a href="../pages/specials.html">Weekly Specials</a></li>
+                    <li class="drop-link"><a href="../pages/events.html">Events Booking</a></li>
+                    <li class="drop-link"><a href="../pages/GiftCards.html">Gift Cards</a></li>
                     </ul>
                 </li>
 
-                <li class="dropdown"><a href="/pages/sitemap.html">Site Map</a></li>
-                <li class="dropdown"><a href="/pages/contest.html">Contests</a></li>
+                <li class="dropdown"><a href="../pages/sitemap.html">Site Map</a></li>
+                <li class="dropdown"><a href="../pages/contest.html">Contests</a></li>
 
             </ul>
         </nav>
@@ -72,12 +72,12 @@
       <h2 class="aboutHeader"> The Chef </h2>
       <div class="aboutContainer">
         <p class="aboutText"> Daksha Misra was born in Mumbai to a loving family. Her mom was a chef for one of Mumbai's biggest restaurants, the Bademiya. Her Dad owned a Naan supply company. Daksha grew up in a household that prioritizes family meal time. Daksha understands the positive mental and emotional benefits having a homegrown meal brings to the family. Daksha found her passion for cooking at a young age of 4, helping her mom prepare food for the family. Daksha understands all the elements that come into eating with family. She understands the delicate atmosphere that family dinners commend, and she understands the incredibly important ingredient choices that go into a well prepared meal. Daksha does not take shortcuts and with 12 years of professional cooking on her hands, eating under Chef Misra brings upon an aura of wholesomeness, quality, and deliciousness. </p>
-        <img src="/resources/Images/AboutUs/chef.jpeg" alt="Taj Mahal Chef" class="aboutPhoto">
+        <img src="../resources/Images/AboutUs/chef.jpeg" alt="Taj Mahal Chef" class="aboutPhoto">
       </div>
       <h2 class="aboutHeader"> The Family </h2>
       <div class="aboutContainer">
         <p class="aboutText"> We are a family owned traditional Indian restaurant. Established in 2020, our mission is to feed the local community cuisine from our motherland. We outsource ingredients from local farmers and independently owned Southeast Asian grocery stores. Our chef was born in Mumbai, moving to Toronto when she was 19 in order to seek a better life for her family. She started cooking by helping her mom prepare family dinners at the age of 4. The Taj Mahal restaurant strives to serve you the highest quality dishes possible. </p>
-        <img src="/resources/Images/AboutUs/family.jpeg" alt="Taj Mahal Family" class="aboutPhoto">
+        <img src="../resources/Images/AboutUs/family.jpeg" alt="Taj Mahal Family" class="aboutPhoto">
       </div>
     </div>
     
