--- a/pages/locations.html
+++ b/pages/locations.html
@@ -5,7 +5,7 @@
       <title>Our locations</title>
       <link rel="stylesheet" href="../css/style.css">
       <link rel="stylesheet" href="../css/Locations/locations.css">
-      <script src="../javascript/jquery-3.5.1.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" charset="utf-8"></script>
+      <script src="../javascript/jquery-3.5.1.js" charset="utf-8"></script>
       <script src="../javascript/locations/locations.js" charset="utf-8" defer></script>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFCCEFBJZGAqMxTsRN-EWGdW5-L3-eiSI&callback=initMap&libraries=geometry" defer></script>
 
