--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -5,7 +5,7 @@
     <title>Sitemap</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/SiteMap/sitemap.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" charset="utf-8"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" charset="utf-8"></script>
     <script src="../javascript/sitemap/sitemap.js" charset="utf-8"></script>
   </head>
 
